--- a/notebook/NonStiffDDE/Mackey_Glass_wpd.ipynb
+++ b/notebook/NonStiffDDE/Mackey_Glass_wpd.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Mackey and Glass Work-Precision Diagrams\n### David Widmann, Chris Rackauckas\n\n# Mackey and Glass\n\nWe study algorithms for solving constant delay differential equations with a test problem from W.H. Enright and H. Hayashi, \"The evaluation of numerical software for delay differential equations\", 1997. It is a model of blood production that was published by M. C. Mackey and L. Glass in \"Oscillation and chaos in physiological control systems\", 1977, and is given by\n```math\n\\begin{equation}\n y'(t) = \\frac{0.2y(t-14)}{1 + y(t-14)^{10}} - 0.1y(t)\n\\end{equation}\n```"
+        "# Mackey and Glass Work-Precision Diagrams\n### David Widmann, Chris Rackauckas\n\n# Model\n\nWe study a model of blood production that was published by M. C. Mackey and L. Glass in \"Oscillation and chaos in physiological control systems\", 1977, and is given by\n```math\n\\begin{equation}\n y'(t) = \\frac{0.2y(t-14)}{1 + y(t-14)^{10}} - 0.1y(t)\n\\end{equation}\n```\nfor ``t \\in [0, 500]`` with history function ``\\phi(t) = 0.5`` for ``t \\leq 0``. It is test problem A1 of W. H. Enright and H. Hayashi, \"The evaluation of numerical software for delay differential equations\", 1997.\n\n# Setup"
       ],
       "metadata": {}
     },
@@ -11,7 +11,16 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "using DelayDiffEq, DiffEqDevTools, DiffEqProblemLibrary, Plots\nusing DiffEqProblemLibrary.DDEProblemLibrary: importddeproblems; importddeproblems()\nimport DiffEqProblemLibrary.DDEProblemLibrary: prob_dde_mackey\ngr()\n\nsol = solve(prob_dde_mackey, MethodOfSteps(Vern9(), max_fixedpoint_iters=1000); reltol=1e-14, abstol=1e-14)\ntest_sol = TestSolution(sol)\nplot(sol)"
+        "using DelayDiffEq, DiffEqDevTools, DiffEqProblemLibrary.DDEProblemLibrary\nDDEProblemLibrary.importddeproblems()\n\nconst prob = DDEProblemLibrary.prob_dde_DDETST_A1\nconst sol = solve(prob, MethodOfSteps(Vern9()); dtmax = 0.1, reltol = 1e-14, abstol = 1e-14)\nconst test_sol = TestSolution(sol)\n\nusing Plots\ngr()\nplot(sol)"
+      ],
+      "metadata": {},
+      "execution_count": null
+    },
+    {
+      "outputs": [],
+      "cell_type": "code",
+      "source": [
+        "function buildWorkPrecisionSet(algs, abstols, reltols; kwargs...)\n    setups = [Dict(:alg => MethodOfSteps(alg)) for alg in algs]\n    names = nameof.(typeof.(algs))\n\n    WorkPrecisionSet(prob, abstols, reltols, setups;\n                     names = names, appxsol = test_sol, maxiters = Int(1e5), kwargs...)\nend"
       ],
       "metadata": {},
       "execution_count": null
@@ -27,7 +36,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "abstols = 1.0 ./ 10.0 .^ (4:7)\nreltols = 1.0 ./ 10.0 .^ (1:4)\n\nsetups = [Dict(:alg=>MethodOfSteps(BS3())),\n          Dict(:alg=>MethodOfSteps(Tsit5())),\n          Dict(:alg=>MethodOfSteps(RK4())),\n          Dict(:alg=>MethodOfSteps(DP5())),\n          Dict(:alg=>MethodOfSteps(OwrenZen3())),\n          Dict(:alg=>MethodOfSteps(OwrenZen4())),\n          Dict(:alg=>MethodOfSteps(OwrenZen5()))]\nnames = [\"BS3\", \"Tsit5\", \"RK4\", \"DP5\", \"OwrenZen3\", \"OwrenZen4\", \"OwrenZen5\"]\nwp = WorkPrecisionSet(prob_dde_mackey,abstols,reltols,setups;names=names,\n                      appxsol=test_sol,maxiters=Int(1e5),error_estimate=:final)\nplot(wp)"
+        "abstols = @. 1.0 / 10.0^(4:7)\nreltols = @. 1.0 / 10.0^(1:4)\nalgs = [BS3(), Tsit5(), RK4(), DP5(), OwrenZen3(), OwrenZen4(), OwrenZen5()]\n\nwp = buildWorkPrecisionSet(algs, abstols, reltols; error_estimate = :final)\nplot(wp)"
       ],
       "metadata": {},
       "execution_count": null
@@ -43,7 +52,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "abstols = 1.0 ./ 10.0 .^ (4:7)\nreltols = 1.0 ./ 10.0 .^ (1:4)\n\nsetups = [Dict(:alg=>MethodOfSteps(BS3())),\n          Dict(:alg=>MethodOfSteps(Tsit5())),\n          Dict(:alg=>MethodOfSteps(RK4())),\n          Dict(:alg=>MethodOfSteps(DP5())),\n          Dict(:alg=>MethodOfSteps(OwrenZen3())),\n          Dict(:alg=>MethodOfSteps(OwrenZen4())),\n          Dict(:alg=>MethodOfSteps(OwrenZen5()))]\nnames = [\"BS3\", \"Tsit5\", \"RK4\", \"DP5\", \"OwrenZen3\", \"OwrenZen4\", \"OwrenZen5\"]\nwp = WorkPrecisionSet(prob_dde_mackey,abstols,reltols,setups;names=names,\n                      appxsol=test_sol,maxiters=Int(1e5),error_estimate=:L2)\nplot(wp)"
+        "abstols = @. 1.0 / 10.0^(4:7)\nreltols = @. 1.0 / 10.0^(1:4)\nalgs = [BS3(), Tsit5(), RK4(), DP5(), OwrenZen3(), OwrenZen4(), OwrenZen5()]\n\nwp = buildWorkPrecisionSet(algs, abstols, reltols; error_estimate = :L2)\nplot(wp)"
       ],
       "metadata": {},
       "execution_count": null
@@ -59,7 +68,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "abstols = 1.0 ./ 10.0 .^ (8:11)\nreltols = 1.0 ./ 10.0 .^ (5:8)\n\nsetups = [Dict(:alg=>MethodOfSteps(BS3())),\n          Dict(:alg=>MethodOfSteps(Tsit5())),\n          Dict(:alg=>MethodOfSteps(RK4())),\n          Dict(:alg=>MethodOfSteps(DP5())),\n          Dict(:alg=>MethodOfSteps(OwrenZen3())),\n          Dict(:alg=>MethodOfSteps(OwrenZen4())),\n          Dict(:alg=>MethodOfSteps(OwrenZen5()))]\nnames = [\"BS3\", \"Tsit5\", \"RK4\", \"DP5\", \"OwrenZen3\", \"OwrenZen4\", \"OwrenZen5\"]\nwp = WorkPrecisionSet(prob_dde_mackey,abstols,reltols,setups;names=names,\n                      appxsol=test_sol,maxiters=Int(1e5),error_estimate=:final)\nplot(wp)"
+        "abstols = @. 1.0 / 10.0^(8:11)\nreltols = @. 1.0 / 10.0^(5:8)\nalgs = [BS3(), Tsit5(), RK4(), DP5(), OwrenZen3(), OwrenZen4(), OwrenZen5()]\n\nwp = buildWorkPrecisionSet(algs, abstols, reltols; error_estimate = :final)\nplot(wp)"
       ],
       "metadata": {},
       "execution_count": null
@@ -75,7 +84,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "abstols = 1.0 ./ 10.0 .^ (8:11)\nreltols = 1.0 ./ 10.0 .^ (5:8)\n\nsetups = [Dict(:alg=>MethodOfSteps(BS3())),\n          Dict(:alg=>MethodOfSteps(Tsit5())),\n          Dict(:alg=>MethodOfSteps(RK4())),\n          Dict(:alg=>MethodOfSteps(DP5())),\n          Dict(:alg=>MethodOfSteps(OwrenZen3())),\n          Dict(:alg=>MethodOfSteps(OwrenZen4())),\n          Dict(:alg=>MethodOfSteps(OwrenZen5()))]\nnames = [\"BS3\", \"Tsit5\", \"RK4\", \"DP5\", \"OwrenZen3\", \"OwrenZen4\", \"OwrenZen5\"]\nwp = WorkPrecisionSet(prob_dde_mackey,abstols,reltols,setups;names=names,\n                      appxsol=test_sol,maxiters=Int(1e5),error_estimate=:L2)\nplot(wp)"
+        "abstols = @. 1.0 / 10.0^(8:11)\nreltols = @. 1.0 / 10.0^(5:8)\nalgs = [BS3(), Tsit5(), RK4(), DP5(), OwrenZen3(), OwrenZen4(), OwrenZen5()]\n\nwp = buildWorkPrecisionSet(algs, abstols, reltols; error_estimate = :L2)\nplot(wp)"
       ],
       "metadata": {},
       "execution_count": null
@@ -91,7 +100,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "abstols = 1.0 ./ 10.0 .^ (4:7)\nreltols = 1.0 ./ 10.0 .^ (1:4)\n\nsetups = [Dict(:alg=>MethodOfSteps(Vern6())),\n          Dict(:alg=>MethodOfSteps(Vern7())),\n          Dict(:alg=>MethodOfSteps(Vern8())),\n          Dict(:alg=>MethodOfSteps(Vern9())),\n          Dict(:alg=>MethodOfSteps(OwrenZen4()))]\nnames = [\"Vern6\", \"Vern7\", \"Vern8\", \"Vern9\", \"OwrenZen4\"]\nwp = WorkPrecisionSet(prob_dde_mackey,abstols,reltols,setups;names=names,\n                      appxsol=test_sol,maxiters=Int(1e5),error_estimate=:final)\nplot(wp)"
+        "abstols = @. 1.0 / 10.0^(4:7)\nreltols = @. 1.0 / 10.0^(1:4)\nalgs = [Vern6(), Vern7(), Vern8(), Vern9(), OwrenZen4()]\n\nwp = buildWorkPrecisionSet(algs, abstols, reltols; error_estimate = :final)\nplot(wp)"
       ],
       "metadata": {},
       "execution_count": null
@@ -107,7 +116,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "abstols = 1.0 ./ 10.0 .^ (4:7)\nreltols = 1.0 ./ 10.0 .^ (1:4)\n\nsetups = [Dict(:alg=>MethodOfSteps(Vern6())),\n          Dict(:alg=>MethodOfSteps(Vern7())),\n          Dict(:alg=>MethodOfSteps(Vern8())),\n          Dict(:alg=>MethodOfSteps(Vern9())),\n          Dict(:alg=>MethodOfSteps(OwrenZen4()))]\nnames = [\"Vern6\", \"Vern7\", \"Vern8\", \"Vern9\", \"OwrenZen4\"]\nwp = WorkPrecisionSet(prob_dde_mackey,abstols,reltols,setups;names=names,\n                      appxsol=test_sol,maxiters=Int(1e5),error_estimate=:L2)\nplot(wp)"
+        "abstols = @. 1.0 / 10.0^(4:7)\nreltols = @. 1.0 / 10.0^(1:4)\nalgs = [Vern6(), Vern7(), Vern8(), Vern9(), OwrenZen4()]\n\nwp = buildWorkPrecisionSet(algs, abstols, reltols; error_estimate = :L2)\nplot(wp)"
       ],
       "metadata": {},
       "execution_count": null
@@ -123,7 +132,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "abstols = 1.0 ./ 10.0 .^ (8:11)\nreltols = 1.0 ./ 10.0 .^ (5:8)\n\nsetups = [Dict(:alg=>MethodOfSteps(Vern6())),\n          Dict(:alg=>MethodOfSteps(Vern7())),\n          Dict(:alg=>MethodOfSteps(Vern8())),\n          Dict(:alg=>MethodOfSteps(Vern9())),\n          Dict(:alg=>MethodOfSteps(OwrenZen4()))]\nnames = [\"Vern6\", \"Vern7\", \"Vern8\", \"Vern9\", \"OwrenZen4\"]\nwp = WorkPrecisionSet(prob_dde_mackey,abstols,reltols,setups;names=names,\n                      appxsol=test_sol,maxiters=Int(1e5),error_estimate=:final)\nplot(wp)"
+        "abstols = @. 1.0 / 10.0^(8:11)\nreltols = @. 1.0 / 10.0^(5:8)\nalgs = [Vern6(), Vern7(), Vern8(), Vern9(), OwrenZen4()]\n\nwp = buildWorkPrecisionSet(algs, abstols, reltols; error_estimate = :final)\nplot(wp)"
       ],
       "metadata": {},
       "execution_count": null
@@ -132,7 +141,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "abstols = 1.0 ./ 10.0 .^ (8:11)\nreltols = 1.0 ./ 10.0 .^ (5:8)\n\nsetups = [Dict(:alg=>MethodOfSteps(Vern6())),\n          Dict(:alg=>MethodOfSteps(Vern7())),\n          Dict(:alg=>MethodOfSteps(Vern8())),\n          Dict(:alg=>MethodOfSteps(Vern9())),\n          Dict(:alg=>MethodOfSteps(OwrenZen4()))]\nnames = [\"Vern6\", \"Vern7\", \"Vern8\", \"Vern9\", \"OwrenZen4\"]\nwp = WorkPrecisionSet(prob_dde_mackey,abstols,reltols,setups;names=names,\n                      appxsol=test_sol,maxiters=Int(1e5),error_estimate=:L2)\nplot(wp)"
+        "abstols = @. 1.0 / 10.0^(8:11)\nreltols = @. 1.0 / 10.0^(5:8)\nalgs = [Vern6(), Vern7(), Vern8(), Vern9(), OwrenZen4()]\n\nwp = buildWorkPrecisionSet(algs, abstols, reltols; error_estimate = :L2)\nplot(wp)"
       ],
       "metadata": {},
       "execution_count": null
@@ -148,7 +157,7 @@
       "outputs": [],
       "cell_type": "code",
       "source": [
-        "using DiffEqBenchmarks\nDiffEqBenchmarks.bench_footer(WEAVE_ARGS[:folder],WEAVE_ARGS[:file])"
+        "using DiffEqBenchmarks\nDiffEqBenchmarks.bench_footer(WEAVE_ARGS[:folder], WEAVE_ARGS[:file])"
       ],
       "metadata": {},
       "execution_count": null
@@ -160,11 +169,11 @@
       "file_extension": ".jl",
       "mimetype": "application/julia",
       "name": "julia",
-      "version": "1.1.0"
+      "version": "1.1.1"
     },
     "kernelspec": {
       "name": "julia-1.1",
-      "display_name": "Julia 1.1.0",
+      "display_name": "Julia 1.1.1",
       "language": "julia"
     }
   },
